--- a/Draw/Controller/Share/ShareEditController.xib
+++ b/Draw/Controller/Share/ShareEditController.xib
@@ -42,25 +42,27 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="353693316"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">wood_bg.png</string>
+							<string key="NSResourceName">wood_bg@2x.png</string>
 						</object>
 					</object>
 					<object class="IBUIImageView" id="304575801">
 						<reference key="NSNextResponder" ref="1033168711"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 108}, {320, 349}}</string>
+						<string key="NSFrame">{{0, 128}, {320, 329}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="976250215"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">paper.png</string>
+							<string key="NSResourceName">paper@2x.png</string>
 						</object>
 					</object>
 					<object class="IBUIImageView" id="353693316">
@@ -68,19 +70,21 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 50}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="239950230"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">topwood.png</string>
+							<string key="NSResourceName">topwood@2x.png</string>
 						</object>
 					</object>
 					<object class="IBUIImageView" id="13981569">
 						<reference key="NSNextResponder" ref="1033168711"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 58}, {320, 42}}</string>
+						<string key="NSFrame">{{6, 58}, {307, 68}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="730877834"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -88,8 +92,9 @@
 					<object class="IBUIButton" id="239950230">
 						<reference key="NSNextResponder" ref="1033168711"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 5}, {37, 37}}</string>
+						<string key="NSFrame">{{6, 5}, {37, 37}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="7302159"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -109,7 +114,7 @@
 						</object>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">back.png</string>
+							<string key="NSResourceName">back@2x.png</string>
 						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="317083444">
 							<int key="type">2</int>
@@ -124,8 +129,9 @@
 					<object class="IBUIButton" id="7302159">
 						<reference key="NSNextResponder" ref="1033168711"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{228, 5}, {72, 37}}</string>
+						<string key="NSFrame">{{238, 7}, {75, 31}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="13981569"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -144,8 +150,9 @@
 					<object class="IBUITextView" id="730877834">
 						<reference key="NSNextResponder" ref="1033168711"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 58}, {320, 42}}</string>
+						<string key="NSFrame">{{16, 74}, {284, 48}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="304575801"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -154,7 +161,7 @@
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">share share~</string>
+						<string key="IBUIText"/>
 						<object class="IBUITextInputTraits" key="IBUITextInputTraits">
 							<int key="IBUIAutocapitalizationType">2</int>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -172,14 +179,16 @@
 					<object class="IBUIImageView" id="976250215">
 						<reference key="NSNextResponder" ref="1033168711"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{12, 117}, {288, 323}}</string>
+						<string key="NSFrame">{{16, 146}, {288, 296}}</string>
 						<reference key="NSSuperview" ref="1033168711"/>
+						<reference key="NSWindow"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="710874393"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -225,6 +234,14 @@
 						<reference key="destination" ref="7302159"/>
 					</object>
 					<int key="connectionID">31</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">shareTextField</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="730877834"/>
+					</object>
+					<int key="connectionID">33</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -341,9 +358,70 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">32</int>
+			<int key="maxID">33</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">PPViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PPViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ShareEditController</string>
+					<string key="superclassName">PPViewController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="infuseImageView">SynthesisView</string>
+						<string key="inputBackground">UIImageView</string>
+						<string key="myImageView">UIImageView</string>
+						<string key="patternsGallery">UIScrollView</string>
+						<string key="shareButton">UIButton</string>
+						<string key="shareTextField">UITextView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="infuseImageView">
+							<string key="name">infuseImageView</string>
+							<string key="candidateClassName">SynthesisView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="inputBackground">
+							<string key="name">inputBackground</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="myImageView">
+							<string key="name">myImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="patternsGallery">
+							<string key="name">patternsGallery</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="shareButton">
+							<string key="name">shareButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="shareTextField">
+							<string key="name">shareTextField</string>
+							<string key="candidateClassName">UITextView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ShareEditController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">SynthesisView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/SynthesisView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -353,10 +431,10 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="back.png">{16, 16}</string>
-			<string key="paper.png">{16, 16}</string>
-			<string key="topwood.png">{16, 16}</string>
-			<string key="wood_bg.png">{16, 16}</string>
+			<string key="back@2x.png">{74, 74}</string>
+			<string key="paper@2x.png">{640, 960}</string>
+			<string key="topwood@2x.png">{640, 99}</string>
+			<string key="wood_bg@2x.png">{640, 960}</string>
 			<string key="wood_button.png">{16, 16}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">933</string>
